# CS3388

./: Homework 8.ipynb  README.md  bezier.cpp  requirements.txt  triangle.cpp
Assignment 1/: README.md  requirements.txt  triangle.cpp
Assignment 2/: Assignment2.ipynb  README.md  assignment2.ipynb  question1.cpp  question2.cpp
Assignment 3/: README.md  bezier.cpp
Assignment 4/: CMakeLists.txt  Camera.h  LoadBitmap.cpp  README.md  TexturedMesh.cpp  TexturedMesh.h  main.cpp
Assignment 4/Headers/: ImageLoader.h  Shader.cpp  Shader.h  TexturedMesh.cpp  TexturedMesh.h
Assignment 5/: CMakeLists.txt  README.md  README.md.save
Assignment 6/: A6-Water.cpp  LoadShaders.cpp  LoadShaders.hpp  Makefile  PlaneMesh.hpp  README.md  TextureMesh.cpp  TextureMesh.hpp  TextureShader.fragmentshader  TextureShader.vertexshader  WaterShader.fragmentshader  WaterShader.geoshader  WaterShader.tcs  WaterShader.tes  WaterShader.vertexshader  textureLoader.cpp  textureLoader.hpp  water
Homework 3/: homework3.ipynb
Homework 4/: homework4.ipynb
Homework 5/: q1a.cpp  q1b.cpp  q2.cpp  q3.cpp
Homework 6/: README.md  q1.ipynb  q2.ipynb  q3.cpp  q4.cpp
Homework 7/: P7-TODO.cpp  P7-TODO2.cpp  P7-TODO3.cpp  README.md
Homework 8 - Marching Squares/: MarchingRectangles.cpp  MarchingSquares.cpp
Personal/: Emily Medical.docx
Personal/Minesweeper/: a  (+5 more)
School/Year 3/Cs 3388/Assignment 5/: CMakeLists.txt  README.md
School/Year 3/Cs 3388/Assignment 5/include/: TriTable.hpp  rendering.hpp
School/Year 3/Cs 3388/Assignment 5/shaders/: vertex_shader.glsl
School/Year 3/Cs 3388/Assignment 5/src/: main.cpp  shaders.cpp  utils.cpp
(+34 files in other folders)
